--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "forceConsistentCasingInFileNames": true,            
     "strict": true,                                      
     "skipLibCheck": true,                                 
-    "types": ["node", "jest"],
+    "types": ["node", "jest", "chrome"],
     "noImplicitAny": true,
     "noImplicitThis": true,
     "pretty": true,
